--- a/OMGAndroid/app/src/main/res/layout/activity_my.xml
+++ b/OMGAndroid/app/src/main/res/layout/activity_my.xml
@@ -9,8 +9,8 @@
     tools:context=".MyActivity">
 
     <TextView
-        android:text="@string/hello_world"
+        android:text="@string/appGoddess"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"  />
 
 </RelativeLayout>
