--- a/OMGAndroid2/app/src/main/res/layout/activity_my.xml
+++ b/OMGAndroid2/app/src/main/res/layout/activity_my.xml
@@ -2,11 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MyActivity">
+    android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/main_textview"
@@ -14,12 +11,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     
-    <Button
-        android:id="@+id/main_button"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="20dp"
-        android:text="@string/button"/>
+        android:orientation="horizontal">
+    
+        <Button
+            android:id="@+id/main_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:text="@string/button"/>
 
+
+         <ImageView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="20dp"
+             android:layout_marginLeft="20dp"
+             android:src="@drawable/ic_launcher"/>
+
+
+    </LinearLayout>
 </LinearLayout>
