--- a/OMGAndroid2/app/src/main/res/layout/activity_my.xml
+++ b/OMGAndroid2/app/src/main/res/layout/activity_my.xml
@@ -11,6 +11,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     
+    <EditText
+        android:id="@+id/main_edittext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:hint="@string/hint"/>
+    
+    <ListView
+        android:id="@+id/main_listview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="20dp">
+    </ListView>
+    
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
